Creation of crud

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,4 +1,9 @@
-{% extends 'accounts/another_base.html' %}
+{% extends 'registration/another_base.html' %}
+
+{% block title %}
+	Register
+{% endblock %}
+
 {% block content %}
 
 
