--- a/templates/registration/reset/password_reset_sent.html
+++ b/templates/registration/reset/password_reset_sent.html
@@ -1,4 +1,7 @@
-{% extends 'accounts/another_base.html' %}
+{% extends 'registration/another_base.html' %}
+{% block title %}
+    Password-reset sent
+{% endblock %}
 {% block content %}
 <div class="all">
 
