--- a/templates/registration/another_base.html
+++ b/templates/registration/another_base.html
@@ -1,3 +1,4 @@
+<!-- This base is used as a supporting structure to the process of reseting a password and authentication process-->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -5,7 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="{% static '/css/login/styles.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '/css/login/password_reset.css' %}">
     
@@ -18,7 +18,23 @@
 	
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Justmin</title>
+     <!-- This will help change the title of each page dynamially -->
+    
+
+    <link rel="stylesheet" href="{% static 'css/pages/demo.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pages/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'js/demo.js' %}">
+    <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
+    <link rel = "icon" href = "{% static 'images/img7.jpg' %}" type = "image/jpg">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+
+     <title>
+    
+      {% block title %}
+
+      {% endblock %}
+    </title>
 </head>
 <body>
     {% block content %}
@@ -27,3 +43,4 @@
     <script type="text/javascript" src="{% static '/js/index.js' %}"></script>
 </body>
 </html>
+
