--- a/templates/registration/reset/password_reset.html
+++ b/templates/registration/reset/password_reset.html
@@ -1,4 +1,7 @@
-{% extends 'accounts/another_base.html' %}
+{% extends 'registration/another_base.html' %}
+{% block title %}
+    Reset Password
+{% endblock %}
 {% block content %}
 
 <div class="row">
